Progress on toolbar, necessary fixes

--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -36,7 +36,8 @@ ui-fab-button {
   <script src="https://unpkg.com/inline-style-prefixer@3.0.1/dist/inline-style-prefixer.js"></script>
   <script type="module" src="./index.js"></script>
   <ui-alert></ui-alert>
-  <ui-hamburger ui-role="drawer-toggle"></ui-hamburger>
+  <ui-toolbar><div ui-role="title">I'm a title! I like long walks, strong men, etc, etc. Jeebus do i run on for ever and ever and ever</div></ui-toolbar>
+  <ui-hamburger line-color="white" ui-role="drawer-toggle"></ui-hamburger>
   <ui-drawer is-modal right-oriented>
     <ui-button floating-y class="alert-bttn">show alert</ui-button>
   </ui-drawer>
