--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -38,7 +38,7 @@ ui-fab-button {
   <ui-alert></ui-alert>
   <ui-toolbar is-tall><div ui-role="title">I'm a title!</div></ui-toolbar>
   <ui-hamburger line-color="white" ui-role="drawer-toggle"></ui-hamburger>
-  <ui-drawer is-modal right-oriented>
+  <ui-drawer is-modal>
     <ui-button floating-y class="alert-bttn">show alert</ui-button>
   </ui-drawer>
   <script>
