--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -20,34 +20,29 @@ ui-fab-button {
   color: white;
 }
 
-#ui-card-1 {
-  width: 50%;
-  height: 50%;
-  position: absolute;
-  z-index: 1;
-  background-color: purple;
-  color: white;
-  left: 10%;
-}
-
 </style>
 </head>
 <body>
   <script src="https://unpkg.com/inline-style-prefixer@3.0.1/dist/inline-style-prefixer.js"></script>
   <script type="module" src="./index.js"></script>
   <ui-alert></ui-alert>
-  <ui-toolbar is-tall><div ui-role="title">I'm a title!</div></ui-toolbar>
-  <ui-hamburger line-color="white" ui-role="drawer-toggle"></ui-hamburger>
+  <ui-toolbar is-tall>
+    <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
+    <div slot="title">I'm a title!</div>
+  </ui-toolbar>
   <ui-drawer is-modal>
     <ui-button floating-y class="alert-bttn">show alert</ui-button>
   </ui-drawer>
-  <script>
-    customElements.whenDefined('ui-button').then(_ => {
-      document.querySelector('.alert-bttn').on('click', e => {
-        document.querySelector('ui-alert').alert('Alerted!');
-      });
-    })
-  </script>
-
+  <ui-router updates-history renders-current base-path="/test/adhoc">
+    <ui-route route-path="/">
+      <div>I'm root yo</div>
+    </ui-route>
+    <ui-route route-path="/beer">
+      <div>Beer</div>
+    </ui-route>
+    <ui-route route-path="/bourbon">
+      <div>Bourbon</div>
+    </ui-route>
+  </ui-router>
  </body>
 </html>
