--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -44,6 +44,42 @@ ui-fab-button {
   <ui-router updates-history renders-current base-path="/test/adhoc">
     <ui-route route-path="/">
       <div>Imma Login yo</div>
+      <ui-drop-down name="dd" placeholder-text="Choose wisely.">
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+      </ui-drop-down>
+      <ui-drop-down name="dd" placeholder-text="Here too!">
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+        <ui-item>Fro</ui-item>
+        <ui-item value="Bro">Bar</ui-item>
+      </ui-drop-down>
     </ui-route>
     <ui-route route-path="/beer">
       <div>ITSy</div>
@@ -63,7 +99,7 @@ ui-fab-button {
       <ui-card>
         <ui-form id="form-1">
           <ui-input name="foo" placeholder="type foo" required>foo</ui-input>
-          <ui-drop-down name="dd">
+          <ui-drop-down name="dd" placeholder-text="Choose wisely.">
             <ui-item>Fro</ui-item>
             <ui-item value="Bro">Bar</ui-item>
           </ui-drop-down>
