--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -21,6 +21,15 @@ ui-fab-button {
   color: white;
 }
 
+ui-route {
+  margin: 10px;
+  display: block;
+}
+
+ui-list {
+  width: 200px;
+}
+
 </style>
 </head>
 <body>
@@ -30,7 +39,6 @@ ui-fab-button {
   <ui-alert></ui-alert>
   <ui-toolbar is-tall>
     <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
-    <ui-hamburger line-color="purple" drawer-toggle slot="right-button-slot"></ui-hamburger>
     <div>Site Record</div>
     <ui-tabs slot="secondary-toolbar-slot" for="ui-router">
       <ui-tab data-value="/">Login</ui-tab>
@@ -45,7 +53,14 @@ ui-fab-button {
   </ui-drawer>
   <ui-router updates-history renders-current base-path="/test/adhoc">
     <ui-route route-path="/">
-      <div>Imma Login yo</div>
+      <ui-list>
+        <ui-item>Foo</ui-item>
+        <ui-item>Bar</ui-item>
+      </ui-list>
+      <ui-list multiple>
+        <ui-item>Foo</ui-item>
+        <ui-item>Bar</ui-item>
+      </ui-list>
       <ui-drop-down name="dd" placeholder-text="Choose wisely.">
         <ui-item>Fro</ui-item>
         <ui-item value="Bro">Bar</ui-item>
@@ -64,7 +79,7 @@ ui-fab-button {
         <ui-item>Fro</ui-item>
         <ui-item value="Bro">Bar</ui-item>
       </ui-drop-down>
-      <ui-drop-down name="dd" placeholder-text="Here too!">
+      <ui-drop-down name="dd" name="Here too!" multiple>
         <ui-item>Fro</ui-item>
         <ui-item value="Bro">Bar</ui-item>
         <ui-item>Fro</ui-item>
@@ -100,7 +115,7 @@ ui-fab-button {
     <ui-route route-path="/formica" updates-history>
       <ui-card>
         <ui-form id="form-1">
-          <ui-input name="foo" placeholder="type foo" required>foo</ui-input>
+          <ui-input name="foo" placeholder-text="type foo" required>foo</ui-input>
           <ui-drop-down name="dd" placeholder-text="Choose wisely.">
             <ui-item>Fro</ui-item>
             <ui-item value="Bro">Bar</ui-item>
