--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -41,11 +41,11 @@ ui-list {
     <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
     <div>Site Record</div>
     <ui-tabs slot="secondary-toolbar-slot" for="ui-router">
-      <ui-tab data-value="/">Login</ui-tab>
-      <ui-tab data-value="/beer">ITS</ui-tab>
-      <ui-tab data-value="/bourbon">Signals</ui-tab>
-      <ui-tab data-value="/inputy">Input</ui-tab>
-      <ui-tab data-value="/formica">Form</ui-tab>
+      <ui-tab value="/">Login</ui-tab>
+      <ui-tab value="/beer">ITS</ui-tab>
+      <ui-tab value="/bourbon">Signals</ui-tab>
+      <ui-tab value="/inputy">Input</ui-tab>
+      <ui-tab value="/formica">Form</ui-tab>
     </ui-tabs>
   </ui-toolbar>
   <ui-drawer is-modal>
