WIP gmaps, login

--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -61,7 +61,7 @@ ui-list {
         <ui-item>Foo</ui-item>
         <ui-item>Bar</ui-item>
       </ui-list>
-      <ui-drop-down name="dd" placeholder-text="Choose wisely.">
+      <ui-drop-down name="dd" placeholder="Choose wisely.">
         <ui-item>Fro</ui-item>
         <ui-item value="Bro">Bar</ui-item>
         <ui-item>Fro</ui-item>
@@ -80,20 +80,6 @@ ui-list {
         <ui-item value="Bro">Bar</ui-item>
       </ui-drop-down>
       <ui-drop-down name="dd" name="Here too!" multiple>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
         <ui-item>Fro</ui-item>
         <ui-item value="Bro">Bar</ui-item>
       </ui-drop-down>
@@ -115,8 +101,8 @@ ui-list {
     <ui-route route-path="/formica" updates-history>
       <ui-card>
         <ui-form id="form-1">
-          <ui-input name="foo" placeholder-text="type foo" required>foo</ui-input>
-          <ui-drop-down name="dd" placeholder-text="Choose wisely.">
+          <ui-input name="foo" placeholder="type foo" required>foo</ui-input>
+          <ui-drop-down name="dd" placeholder="Choose wisely.">
             <ui-item>Fro</ui-item>
             <ui-item value="Bro">Bar</ui-item>
           </ui-drop-down>
