Updated test page and js

--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -53,36 +53,7 @@ ui-list {
   </ui-drawer>
   <ui-router updates-history renders-current base-path="/test/adhoc">
     <ui-route route-path="/">
-      <ui-list>
-        <ui-item>Foo</ui-item>
-        <ui-item>Bar</ui-item>
-      </ui-list>
-      <ui-list multiple>
-        <ui-item>Foo</ui-item>
-        <ui-item>Bar</ui-item>
-      </ui-list>
-      <ui-drop-down name="dd" placeholder="Choose wisely.">
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-      </ui-drop-down>
-      <ui-drop-down name="dd" name="Here too!" multiple>
-        <ui-item>Fro</ui-item>
-        <ui-item value="Bro">Bar</ui-item>
-      </ui-drop-down>
+      <ui-login></ui-login>
     </ui-route>
     <ui-route route-path="/beer">
       <div>ITSy</div>
