Added hash-bang property

--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -51,7 +51,7 @@ ui-list {
   <ui-drawer is-modal>
     <ui-button floating-y class="alert-bttn">show alert</ui-button>
   </ui-drawer>
-  <ui-router updates-history renders-current base-path="/test/adhoc">
+  <ui-router updates-history renders-current hash-bang>
     <ui-route route-path="/">
       <ui-login></ui-login>
     </ui-route>
