--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -53,7 +53,7 @@ ui-list {
   </ui-drawer>
   <ui-router updates-history renders-current hash-bang>
     <ui-route route-path="/">
-      <ui-login></ui-login>
+      <ui-login data-url="/data/login" session-timeout="2000"></ui-login>
     </ui-route>
     <ui-route route-path="/beer">
       <div>ITSy</div>
