--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -41,10 +41,10 @@ ui-list {
     <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
     <div>Site Record</div>
     <ui-tabs slot="secondary-toolbar-slot" for="ui-router">
-      <ui-tab value="/">Login</ui-tab>
+      <ui-tab value="/login">Login</ui-tab>
       <ui-tab value="/beer">ITS</ui-tab>
       <ui-tab value="/bourbon">Signals</ui-tab>
-      <ui-tab value="/inputy">Input</ui-tab>
+      <ui-tab value="/">Input</ui-tab>
       <ui-tab value="/formica">Form</ui-tab>
     </ui-tabs>
   </ui-toolbar>
@@ -52,8 +52,8 @@ ui-list {
     <ui-button floating-y class="alert-bttn">show alert</ui-button>
   </ui-drawer>
   <ui-router updates-history renders-current hash-bang>
-    <ui-route route-path="/">
-      <ui-login data-url="/data/login" session-timeout="2000"></ui-login>
+    <ui-route route-path="/login">
+      <ui-login data-url="/data/login" session-timeout="5000"></ui-login>
     </ui-route>
     <ui-route route-path="/beer">
       <div>ITSy</div>
@@ -61,7 +61,7 @@ ui-list {
     <ui-route route-path="/bourbon">
       <div>Signals</div>
     </ui-route>
-    <ui-route route-path="/inputy" foo="super">
+    <ui-route route-path="/" foo="super">
       <ui-card id="ui-card-1">
         I am changed by my parent! Parent says: <ui-text view-text="{{foo}}"></ui-text>
       </ui-card>
