Began adding tooling support for older browsers

--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -35,7 +35,7 @@ ui-list {
 <body>
   <!-- <script src="https://unpkg.com/inline-style-prefixer@3.0.1/dist/inline-style-prefixer.js"></script> -->
   <script type="module" src="./index.js"></script>
-  <script src="./backup.js" nomodule></script>
+  <script src="../../build/nomodule.js" nomodule></script>
   <ui-alert></ui-alert>
   <ui-toolbar is-tall>
     <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
