--- a/test/adhoc/index.html
+++ b/test/adhoc/index.html
@@ -34,8 +34,7 @@ ui-list {
 </head>
 <body>
   <!-- <script src="https://unpkg.com/inline-style-prefixer@3.0.1/dist/inline-style-prefixer.js"></script> -->
-  <script type="module" src="./index.js"></script>
-  <script src="../../build/nomodule.js" nomodule></script>
+  <script src="../../build/loader.min.js"></script>
   <ui-alert></ui-alert>
   <ui-toolbar is-tall>
     <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
