--- a/spec/adhoc/lifecycle.html
+++ b/spec/adhoc/lifecycle.html
@@ -6,14 +6,18 @@
 <style>
 
 </style>
-<script src="../../src/elements/input.js" type="module"></script>
-<script src="../../src/elements/drop-down.js" type="module"></script>
+<!-- <script src="../../src/elements/input.js" type="module"></script>
+<script src="../../src/elements/drop-down.js" type="module"></script> -->
+<script src="../../src/elements/dialog.js" type="module"></script>
 </head>
 <body>
-  <ui-input name="foo_bar" label="Foobar"></ui-input>
-  <ui-drop-down label="Barbaz" name="bar_baz">
-    <ui-item>Foo</ui-item>
-    <ui-item>Bar</ui-item>
-  </ui-drop-down>
+  <ui-dialog is-modal>Foo!
+    <ui-button dialog-dismiss>Close</ui-button>
+  </ui-dialog>
+  <script>
+    customElements.whenDefined('ui-dialog').then(_ => {
+      // document.querySelector('ui-dialog').onReady(el => el.open());
+    });
+  </script>
 </body>
 </html>
