Form tests/fixes WIP

--- a/spec/adhoc/index.html
+++ b/spec/adhoc/index.html
@@ -70,7 +70,7 @@ ui-list {
     </ui-route>
     <ui-route route-path="/formica" updates-history>
       <ui-card>
-        <ui-form id="form-1">
+        <ui-form id="form-1" updates-history>
           <ui-input name="foo" placeholder="type foo" required>foo</ui-input>
           <ui-drop-down name="dd" placeholder="Choose wisely.">
             <ui-item>Fro</ui-item>
