--- a/spec/adhoc/index.html
+++ b/spec/adhoc/index.html
@@ -34,7 +34,19 @@ ui-list {
 </head>
 <body>
   <!-- <script src="https://unpkg.com/inline-style-prefixer@3.0.1/dist/inline-style-prefixer.js"></script> -->
-  <script src="../../build/loader.min.js"></script>
+  <script src="../../build/loader.js" nomodule></script>
+  <script type="module">
+    import '../../src/elements/login.js';
+	  import '../../src/elements/fab.js';
+	  import '../../src/elements/drop-down.js';
+	  import '../../src/elements/drawer.js';
+	  import '../../src/elements/hamburger.js';
+	  import '../../src/elements/input.js';
+	  import '../../src/elements/router.js';
+	  import '../../src/elements/tabs.js';
+	  import '../../src/elements/text.js';
+	  import '../../src/elements/toolbar.js';
+  </script>
   <ui-alert></ui-alert>
   <ui-toolbar is-tall>
     <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
