--- a/spec/adhoc/index.html
+++ b/spec/adhoc/index.html
@@ -34,7 +34,7 @@ ui-list {
 </head>
 <body>
   <!-- <script src="https://unpkg.com/inline-style-prefixer@3.0.1/dist/inline-style-prefixer.js"></script> -->
-  <script src="../../build/loader.js" nomodule></script>
+  <script src="../../build/loader.min.js" nomodule></script>
   <script type="module">
     import '../../src/elements/login.js';
 	  import '../../src/elements/fab.js';
@@ -96,11 +96,13 @@ ui-list {
     </ui-route>
   </ui-router>
   <script>
-    customElements.whenDefined('ui-button').then(function() {
-      document.querySelector('.alert-bttn').on('click', function() {
-        document.querySelector('ui-alert').alert('Alerted!');
+    setTimeout(function() {
+      window.customElements.whenDefined('ui-button').then(function() {
+        document.querySelector('.alert-bttn').on('click', function() {
+          document.querySelector('ui-alert').alert('Alerted!');
+        });
       });
-    });
+    }, 500);
   </script>
  </body>
 </html>
