--- a/spec/auto/index.html
+++ b/spec/auto/index.html
@@ -9,7 +9,7 @@
   <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
   <script src="../../node_modules/jasmine-core/lib/console/console.js"></script>
   <script src="../../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
-  <script type="module" src="./spec.js"></script>
+  <script type="module" src="../../spec/auto/spec.js"></script>
   <!-- Wire up ConsoleReporter -->
   <script src="../../spec/auto/runner.js"></script>
 </head>
