--- a/spec/adhoc/index.html
+++ b/spec/adhoc/index.html
@@ -84,8 +84,8 @@ ui-list {
         <ui-form id="form-1" updates-history>
           <ui-input name="foo" placeholder="type foo" required>foo</ui-input>
           <ui-drop-down name="dd" placeholder="Choose wisely.">
-            <ui-item id="fro">Fro</ui-item>
-            <ui-item value="Bro" id="bro">Bar</ui-item>
+            <ui-item id="fro" tooltip="fro is a 70's hairstyle">Fro</ui-item>
+            <ui-item value="Bro" id="bro" tooltip="bros love broing it up">Bar</ui-item>
           </ui-drop-down>
           <ui-input name="qux" default-value="fooey"></ui-input>
           <input name="bar" />
