Fixed build, artifacts

--- a/spec/adhoc/index.html
+++ b/spec/adhoc/index.html
@@ -46,7 +46,7 @@ ui-list {
 	  import '../../src/elements/toolbar.js';
     import '../../src/elements/tooltip.js';
   </script>
-  <ui-alert></ui-alert>
+  <ui-alert confirmable="true"></ui-alert>
   <ui-toolbar is-tall>
     <ui-hamburger line-color="white" drawer-toggle slot="left-button-slot"></ui-hamburger>
     <div>Site Record</div>
